--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "joi": "^17.6.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3"
   },
   "rules": {
