--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -2,5 +2,5 @@ APP_PORT=5000
 FRONTEND_URL=http://localhost:3000
 DB_HOST=localhost
 DB_USER=delphine
-DB_PASSWORD=jecode4wcs!Nantes
+DB_PASSWORD=
 DB_NAME=place_arts
